backend/src/main/java/com/example/backend/controller/error/exception/articlecategory/NoArticleCategoryException.java
package com.example.backend.controller.error.exception.articlecategory;

import org.springframework.data.crossstore.ChangeSetPersister.NotFoundException;

public class NoArticleCategoryException extends IllegalArgumentException {
}
